dynamic compilation and some refactoring